# pytweening

./: AUTHORS.txt  CHANGES.txt  MANIFEST.in  README  README.md  README.txt  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
pytweening/: __init__.py
tests/: basicTests.py  generateExcelGraphs.py  graphs.ipynb  graphs.xlsx  seeGraphs.py
